Add YNAB Affiliation Disclaimer to privacy policy

--- a/_privacy_versions/2025-07-22.md
+++ b/_privacy_versions/2025-07-22.md
@@ -38,6 +38,12 @@ Streaks (For YNAB) ("we," "our," or "us") is committed to protecting your privac
 Policy explains how we collect, use, and safeguard your information when you use our iOS
 application.
 
+## YNAB Affiliation Disclaimer
+
+We are not affiliated, associated, or in any way officially connected with YNAB, or any of its subsidiaries or its affiliates. We are fans of YNAB and wanted to a way track our spending habits.
+
+The official YNAB website can be found at https://www.ynab.com . The names YNAB and You Need A Budget as well as related names, marks, emblems and images are registered trademarks of YNAB.
+
 ## Information The App Collects
 
 ### YNAB Account Data
